# alphaduel

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
configs/: default.yaml
src/alphaduel/: __init__.py  cli.py  config.py
src/alphaduel/baselines/: __init__.py  policies.py
src/alphaduel/dashboard/: __init__.py  app.py  launch.py  service.py
src/alphaduel/data/: __init__.py  dataset.py  download.py  features.py  splits.py
src/alphaduel/env/: __init__.py  gym_env.py  portfolio.py
src/alphaduel/eval/: __init__.py  backtest.py  metrics.py
src/alphaduel/utils/: __init__.py  prices.py
tests/: test_baselines_and_dashboard.py  test_env.py  test_m1.py
