[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alphaduel"
version = "0.0.1"
description = "A controlled duel between reasoning LLM agents and pure quant models for portfolio allocation."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "Aurel Steve Avomo", email = "avomoa@gmail.com" }]
keywords = ["reinforcement-learning", "llm", "finance", "portfolio", "gymnasium", "quant"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Science/Research",
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "gymnasium>=0.29",
  "pydantic>=2.6",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
# Live market-data fetchers (kept optional so the core stays light and offline-friendly).
data = ["yfinance>=0.2.40", "pandas-datareader>=0.10", "pyarrow>=15.0"]
# Interactive dashboard.
app = ["streamlit>=1.36", "plotly>=5.22"]
dev = ["pytest>=8.0", "ruff>=0.5", "plotly>=5.22"]

[project.scripts]
alphaduel-baselines = "alphaduel.cli:baselines_main"
alphaduel-dashboard = "alphaduel.dashboard.launch:main"

[project.urls]
Homepage = "https://github.com/aurelSteve77/alphaduel"

[tool.hatch.build.targets.wheel]
packages = ["src/alphaduel"]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
